# data_platform

./: .gitignore
crates/compiler/: Cargo.toml  DESIGN.md
crates/compiler/notes/syntax_grammar/: complex_query.sql  context.md  decorators-transactions.md  grouo-muse.md  many-examples.sql  more.md  name-resolution-and-scoping.md  native-collection-query-surface.md  nested-array-navigation.md  pipelining.md  projection.txt  prompt.md  select.md  semantics.md  semantics_raw.md  standard-library-data-structures-and-algorithms.md
crates/compiler/stdlib/core/: Cargo.toml
crates/compiler/yelang-arena/: Cargo.toml
crates/compiler/yelang-arena/src/: arena.rs  id.rs  index_vec.rs  lib.rs
crates/compiler/yelang-ast/: Cargo.toml
crates/compiler/yelang-ast/examples/: parse_ops_yed.rs  parse_reflect_yed.rs  parse_struct_generic_named.rs  test_parse_error.rs  test_parser.rs
crates/compiler/yelang-ast/src/: lib.rs  mod.rs  parse.rs  program.rs  ptr.rs
crates/compiler/yelang-ast/tests/: yed_syntax_corpus.rs
crates/compiler/yelang-codegen/: Cargo.toml
crates/compiler/yelang-codegen/src/: emit.rs  lib.rs  pipeline.rs  produce_consume.rs
crates/compiler/yelang-driver/: Cargo.toml
crates/compiler/yelang-driver/src/: driver.rs  error.rs  lib.rs  stdlib.rs
crates/compiler/yelang-driver/tests/: e2e.rs  end_to_end_query_tests.rs  qir_aggregate_tests.rs  qir_extract_tests.rs  qir_query_syntax_tests.rs  source_aggregate_tests.rs  stdlib_parse_tests.rs  stdlib_queryable_tests.rs  tmp_closure.rs  tmp_trait_closure.rs  tmp_usize.rs
crates/compiler/yelang-hir/: Cargo.toml  SPEC.md
crates/compiler/yelang-hir/src/: crate_data.rs  crate_hir.rs  hir.rs  hir_body.rs  hir_expr.rs  hir_item.rs  hir_pat.rs  hir_struct.rs  hir_ty.rs  ids.rs  lib.rs  lowering.rs  lowering_body.rs  lowering_err.rs  lowering_expr.rs  lowering_item.rs  lowering_pat.rs  lowering_ty.rs  map.rs  res.rs  validate.rs  visitor.rs
crates/compiler/yelang-infer/: Cargo.toml
crates/compiler/yelang-infer/src/: const_variable.rs  context.rs  error.rs  lib.rs  occurs_check.rs  snapshot.rs  type_variable.rs  unify.rs
crates/compiler/yelang-interner/: Cargo.toml
crates/compiler/yelang-interner/src/: interner.rs  lib.rs
crates/compiler/yelang-jit/: Cargo.toml
crates/compiler/yelang-jit/src/: backend.rs  compile.rs  lib.rs  profiling.rs
crates/compiler/yelang-jit/tests/: jit.rs
crates/compiler/yelang-lexer/: Cargo.toml
crates/compiler/yelang-lexer/src/: lib.rs  macros.rs  test.rs
crates/compiler/yelang-macro/: Cargo.toml  build.rs
crates/compiler/yelang-macro-core/: Cargo.toml
crates/compiler/yelang-macro-core/src/: hygiene.rs  id.rs  lib.rs
crates/compiler/yelang-macro/src/: builtin_decorators.rs  builtin_macros.rs  cfg.rs  eager.rs  error.rs  expander.rs  hygiene.rs  lib.rs  parse_macro_output.rs  paste.rs  quote.rs  resolver.rs  transcribe.rs
crates/compiler/yelang-macro/tests/: declarative_macros.rs  declarative_macros_exhaustive.rs  declarative_macros_hygiene.rs  declarative_macros_phase2.rs  declarative_macros_phase3.rs  declarative_macros_phase4.rs  declarative_macros_phase5.rs  declarative_macros_phase6.rs  proc_macro_discovery.rs  proc_macro_integration.rs  proc_macro_server_integration.rs  proc_macro_wire_tests.rs
crates/compiler/yelang-mir/: Cargo.toml
crates/compiler/yelang-mir/src/: body.rs  bridge.rs  build.rs  lib.rs  ops.rs  place.rs  terminator.rs
crates/compiler/yelang-proc-macro/: Cargo.toml
crates/compiler/yelang-proc-macro-bridge/: Cargo.toml
crates/compiler/yelang-proc-macro-bridge/src/: lib.rs
crates/compiler/yelang-proc-macro-bridge/tests/: abi_layout_tests.rs  protocol_tests.rs
crates/compiler/yelang-proc-macro-server/: Cargo.toml
crates/compiler/yelang-proc-macro-server/src/: lib.rs  main.rs
crates/compiler/yelang-proc-macro-server/tests/: client_resilience.rs  macro_discovery.rs  macro_server_integration.rs  server_integration.rs
crates/compiler/yelang-proc-macro/src/: lib.rs  to_tokens.rs
crates/compiler/yelang-proc-macro/tests/: api_tests.rs  introspect_tests.rs  parse_tests.rs  quote_tests.rs
crates/compiler/yelang-qir/: Cargo.toml
crates/compiler/yelang-qir/src/: analysis.rs  demand.rs  errors.rs  expr.rs  extract.rs  ids.rs  lib.rs  lower.rs  plan.rs  tree.rs  volatility.rs
crates/compiler/yelang-qir/tests/: advanced.rs  aggregate_closure_tests.rs  aggregation.rs  decorrelate.rs  decorrelate_pipeline.rs  differential.rs  end_to_end_query_tests.rs  exec_operators.rs  exec_tests.rs  expr_tests.rs  (+24 more)
crates/compiler/yelang-quote/: Cargo.toml
crates/compiler/yelang-resolve/: Cargo.toml  SPEC.md
crates/compiler/yelang-tc/: Cargo.toml
crates/compiler/yelang-thir/: Cargo.toml
crates/compiler/yelang-trait-solver/: Cargo.toml
crates/compiler/yelang-ty/: Cargo.toml
crates/compiler/yelang-tycheck/: Cargo.toml
crates/compiler/yelang-util/: Cargo.toml
crates/compiler/yelang-vm/: Cargo.toml
crates/infra/: Cargo.toml
crates/infra/.cargo/: config.toml
crates/infra/storage-art/: Cargo.toml
crates/infra/storage-blob/: Cargo.toml
crates/infra/storage-btree/: Cargo.toml
crates/infra/storage-bwtree/: Cargo.toml
crates/infra/storage-columnar/: Cargo.toml  PRODUCTION_READINESS.md
crates/infra/storage-compression/: Cargo.toml
crates/infra/storage-file/: Cargo.toml
crates/infra/storage-filter/: Cargo.toml
crates/infra/storage-format/: Cargo.toml
crates/infra/storage-geo/: Cargo.toml
crates/infra/storage-graph/: Cargo.toml
crates/infra/storage-index/: Cargo.toml  PRODUCTION_READINESS.md
crates/infra/storage-kv/: Cargo.toml
crates/infra/storage-memory/: Cargo.toml
crates/infra/storage-metrics/: Cargo.toml
crates/infra/storage-search/: Cargo.toml
crates/infra/storage-skipmap/: Cargo.toml
crates/infra/storage-testkit/: Cargo.toml
crates/infra/storage-time-series/: Cargo.toml
crates/infra/storage-traits/: Cargo.toml
crates/infra/storage-vector/: Cargo.toml
crates/infra/storage-wal/: Cargo.toml
crates/infra/storage_engines/: Cargo.toml  DESIGN.md  PERFORMANCE_ARCHITECTURE.md  PHASE0_DESIGN.md  PHASE1_DESIGN.md
(+1192 files in other folders)
