[workspace]
members = [
    "yelang-util",
    "yelang-interner",
    "yelang-lexer",
    "yelang-ast",
    "yelang-macro",
    "yelang-resolve",
    "yelang-hir",
    "yelang-tc",
    "stdlib/core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Oyelowo Oyedayo <oyelowo.oss@gmail.com>"]
description = "Yelang — A Rust-like systems language without lifetimes"
documentation = "https://github.com/oyelowo/yelang"

[workspace.dependencies]
anyhow = "1"
annotate-snippets = "0.11"
bumpalo = "3"
fxhash = "0.2"
futures = "0.3"
indexmap = "2"
insta = "1"
lasso = { version = "0.7", features = ["multi-threaded"] }
lexical = "7"
lexical-core = "1"
log = "0.4"
memchr = "2"
ropey = "1"
rustc-hash = "2"
rstest = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slotmap = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
