[workspace]
members = [
    "yelang-arena",
    "yelang-interner",
    "yelang-lexer",
    "yelang-ast",
    "yelang-resolve",
    "yelang-hir",
    "yelang-ty",
    "yelang-infer",
    "yelang-trait-solver",
    "yelang-tycheck",
    "yelang-thir",
    "yelang-qir",
    "yelang-mir",
    "yelang-driver",
    "stdlib/core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Oyelowo Oyedayo <oyelowo.oss@gmail.com>"]
description = "Yelang — A Rust-like systems language without lifetimes"
documentation = "https://github.com/oyelowo/yelang"

[workspace.dependencies]
anyhow = "1"
annotate-snippets = "0.11"
blake3 = "1"
bumpalo = "3"
fxhash = "0.2"
futures = "0.3"
indexmap = "2"
insta = "1"
libc = "0.2"
lasso = { version = "0.7", features = ["multi-threaded"] }
lexical = "7"
lexical-core = "1"
libloading = "0.8"
log = "0.4"
memchr = "2"
postcard = { version = "1", features = ["use-std"] }
ropey = "1"
rustc-hash = "2"
rstest = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slotmap = { version = "1", features = ["serde"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
