[workspace]
members = [
    "storage_engines",
    "storage-traits",
    "storage-testkit",
    "storage-file",
    "storage-format",
    "storage-filter",
    "storage-compression",
    "storage-metrics",
    "storage-skipmap",
    "storage-memory",
    "storage-wal",
    "storage-kv",
    "storage-blob",
    "storage-btree",
    "storage-bwtree",
    "storage-columnar",
    "storage-index",
    "storage-art",
    "storage-vector",
    "storage-time-series",
    # "object_store",
    # "distributed_storages",
    # "consensus",
    # "event_bus",
    # "orchestrator",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Oyelowo Oyedayo <oyelowo.oss@gmail.com>"]
description = "Data platform infrastructure — storage engines, object stores, consensus, etc."
license = "MIT OR Apache-2.0"
