[package]
name = "yelang-arena"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[lib]
doctest = false

[dependencies]
yelang-lexer = { path = "../yelang-lexer" }
yelang-interner = { path = "../yelang-interner" }
fxhash = { workspace = true }
indexmap = { workspace = true }
rustc-hash = { workspace = true }
slotmap = { workspace = true }
