[package]
name = "yelang-driver"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "End-to-end Yelang compiler driver: parse, resolve, type-check, lower, plan, and execute"
documentation.workspace = true

[dependencies]
yelang-arena = { path = "../yelang-arena" }
yelang-ast = { path = "../yelang-ast" }
yelang-hir = { path = "../yelang-hir" }
yelang-interner = { path = "../yelang-interner" }
yelang-lexer = { path = "../yelang-lexer" }
yelang-qir = { path = "../yelang-qir" }
yelang-resolve = { path = "../yelang-resolve" }
yelang-thir = { path = "../yelang-thir" }
yelang-ty = { path = "../yelang-ty" }
yelang-tycheck = { path = "../yelang-tycheck" }
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
rstest.workspace = true
