[package]
name = "yelang-proc-macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[lib]
doctest = false

[dependencies]
yelang-macro-core = { path = "../yelang-macro-core" }
yelang-interner = { path = "../yelang-interner" }
yelang-lexer = { path = "../yelang-lexer" }
thiserror = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
