[package]
name = "yelang-qir"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Query Intermediate Representation (QIR), physical planning, and execution interface for Yelang"
documentation.workspace = true

[dependencies]
yelang-arena = { path = "../yelang-arena" }
yelang-hir = { path = "../yelang-hir" }
yelang-ty = { path = "../yelang-ty" }
yelang-tycheck = { path = "../yelang-tycheck" }
yelang-resolve = { path = "../yelang-resolve" }
yelang-interner = { path = "../yelang-interner" }
yelang-lexer = { path = "../yelang-lexer" }
yelang-thir = { path = "../yelang-thir" }
slotmap.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
rstest.workspace = true
yelang-ast = { path = "../yelang-ast" }
