[package]
name = "yelang-qir"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[lib]
doctest = false

[dependencies]
yelang-arena = { path = "../yelang-arena" }
yelang-ast = { path = "../yelang-ast" }
yelang-hir = { path = "../yelang-hir" }
yelang-interner = { path = "../yelang-interner" }
yelang-lexer = { path = "../yelang-lexer" }
yelang-resolve = { path = "../yelang-resolve" }
yelang-thir = { path = "../yelang-thir" }
yelang-ty = { path = "../yelang-ty" }
slotmap = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
yelang-resolve = { path = "../yelang-resolve" }
yelang-tycheck = { path = "../yelang-tycheck" }
