[package]
name = "yelang-thir"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[lib]
doctest = false

[dependencies]
yelang-arena = { path = "../yelang-arena" }
yelang-ast = { path = "../yelang-ast" }
yelang-hir = { path = "../yelang-hir" }
yelang-interner = { path = "../yelang-interner" }
yelang-lexer = { path = "../yelang-lexer" }
yelang-resolve = { path = "../yelang-resolve" }
yelang-ty = { path = "../yelang-ty" }
yelang-tycheck = { path = "../yelang-tycheck" }
slotmap = { workspace = true }
thiserror = { workspace = true }
