[package]
name = "yelang-ty"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Yelang core type system IR — types, predicates, generics, canonicalization"

[lib]
doctest = false

[dependencies]
yelang-util = { path = "../yelang-util" }
yelang-interner = { path = "../yelang-interner" }
bumpalo = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
