[package]
name = "storage-art"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Adaptive Radix Trie in-memory ordered index."
license.workspace = true

[dependencies]
bytes = "1.10"
thiserror = "2.0"

[dev-dependencies]
storage-testkit = { path = "../storage-testkit" }
tempfile = "3.19"
proptest = "1.6"
