[package]
name = "storage-btree"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Persistent in-place B+ tree key-value storage engine with OLC, WAL, and MVCC."
license.workspace = true

[dependencies]
storage-traits = { path = "../storage-traits" }
storage-wal = { path = "../storage-wal" }
storage-file = { path = "../storage-file" }
storage-format = { path = "../storage-format" }
bytes = "1.10"
thiserror = "2.0"
parking_lot = "0.12"

[dev-dependencies]
storage-testkit = { path = "../storage-testkit" }
tempfile = "3.19"
proptest = "1.6"
criterion = "0.5"
loom = "0.7"

[[bench]]
name = "btree_bench"
harness = false
