[package]
name = "storage-compression"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared compression codec registry for storage engines."
license.workspace = true

[dependencies]
bytes = "1.10"
lz4 = "1.28"
snap = "1.1"
thiserror = "2.0"
zstd = "0.13"

[dev-dependencies]
proptest = "1.6"
